--- a/public/index.html
+++ b/public/index.html
@@ -122,75 +122,75 @@
       <img src="images/portfolio.jpg" alt="Iphone held in Times Square">
       <nav class="nav secondary-nav clearfix">
         <ul class="flex-secnav">
-          <li><a class="flex-secnav-item" href="#">All works</a></li>
-          <li><a class="flex-secnav-item" href="#">Webdesign</a></li>
-          <li><a class="flex-secnav-item" href="#">Brand &amp; Logotypes</a></li>
-          <li><a class="flex-secnav-item" href="#">UI design</a></li>
-          <li><a class="flex-secnav-item" href="#">Icons design</a></li>
+          <li><a class="flex-secnav-item" href="#" data-show-tag="all">All works</a></li>
+          <li><a class="flex-secnav-item" href="#" data-show-tag="webdesign">Webdesign</a></li>
+          <li><a class="flex-secnav-item" href="#" data-show-tag="brand">Brand &amp; Logotypes</a></li>
+          <li><a class="flex-secnav-item" href="#" data-show-tag="ui-design">UI design</a></li>
+          <li><a class="flex-secnav-item" href="#" data-show-tag="icon-design">Icons design</a></li>
         </ul>
       </nav>
       <div class="gallery-flex clearfix">
-        <figure class="thumbnail gallery-flex-item clearfix">
+        <figure class="thumbnail gallery-flex-item clearfix" data-tags="ui-design">
           <a class="icon-see-more" href="#imagine-informative-link-text-here-for-accessibility"><img src="images/youtube.jpg" alt="Screenshot of Photoshop"></a>
           <figcaption>
             <h4>Youtube iphone app</h4>
-            <p>UI design, brand &amp; logotypes</p>
+            <p>UI design</p>
           </figcaption>
         </figure>
-        <figure class="thumbnail  gallery-flex-item">
+        <figure class="thumbnail  gallery-flex-item" data-tags="webdesign, icon-design">
           <a class="icon-see-more"  href="#imagine-informative-link-text-here-for-accessibility"><img src="images/hexagon.jpg" alt="Awengers screenshot"></a>
           <figcaption>
             <h4>Hexagon onepage</h4>
-            <p>Webdesign, brand &amp; logotypes</p>
+            <p>Webdesign, Icons design</p>
           </figcaption>
         </figure>
-        <figure class="thumbnail  gallery-flex-item">
+        <figure class="thumbnail  gallery-flex-item" data-tags="icon-design, brand">
           <a class="icon-see-more"  href="#imagine-informative-link-text-here-for-accessibility"><img src="images/sketches.jpg" alt="Pencil sketches"></a>
           <figcaption>
             <h4>Sketches icon</h4>
             <p>Icons design, brand &amp; logotypes</p>
           </figcaption>
         </figure>
-        <figure class="thumbnail  gallery-flex-item">
+        <figure class="thumbnail  gallery-flex-item" data-tags="ui-design, webdesign">
           <a class="icon-see-more"  href="#imagine-informative-link-text-here-for-accessibility"><img src="images/logotypes.jpg" alt="Logos screenshot"></a>
           <figcaption>
             <h4>Logotypes volume</h4>
-            <p>UI design, brand &amp; logotypes</p>
+            <p>Webdesign, UI design</p>
           </figcaption>
         </figure>
-        <figure class="thumbnail  gallery-flex-item">
+        <figure class="thumbnail  gallery-flex-item" data-tags="webdesign, brand">
           <a class="icon-see-more"  href="#imagine-informative-link-text-here-for-accessibility"><img src="images/flight.jpg" alt="Flight screenshot"></a>
           <figcaption>
             <h4>Flight control</h4>
             <p>Webdesign, brand &amp; logotypes</p>
           </figcaption>
         </figure>
-        <figure class="thumbnail  gallery-flex-item">
+        <figure class="thumbnail  gallery-flex-item" data-tags="icon-design, ui-design">
           <a class="icon-see-more"  href="#imagine-informative-link-text-here-for-accessibility"><img src="images/Ytube.jpg" alt="Iphone app screenshot"></a>
           <figcaption>
             <h4>Youtube app</h4>
-            <p>Icons design, brand &amp; logotypes</p>
+            <p>Icons design, UI design</p>
           </figcaption>
         </figure>
-        <figure class="thumbnail  gallery-flex-item">
+        <figure class="thumbnail  gallery-flex-item" data-tags="ui-design, brand">
           <a class="icon-see-more"  href="#imagine-informative-link-text-here-for-accessibility"><img src="images/management.jpg" alt="Management screenshot"></a>
           <figcaption>
             <h4>Management</h4>
             <p>UI design, brand &amp; logotypes</p>
           </figcaption>
         </figure>
-        <figure class="thumbnail  gallery-flex-item">
+        <figure class="thumbnail  gallery-flex-item" data-tags="webdesign, icon-design, ui-design">
           <a class="icon-see-more"  href="#imagine-informative-link-text-here-for-accessibility"><img src="images/koreanbeef.jpg" alt="Menu screenshot"></a>
           <figcaption>
             <h4>Korean beef</h4>
-            <p>Webdesign, brand &amp; logotypes</p>
+            <p>Webdesign, Icons design, UI design</p>
           </figcaption>
         </figure>
-        <figure class="thumbnail  gallery-flex-item">
+        <figure class="thumbnail  gallery-flex-item" data-tags="icon-design">
           <a class="icon-see-more"  href="#imagine-informative-link-text-here-for-accessibility"><img src="images/thumbs.jpg" alt="Like dislike screenshot"></a>
           <figcaption>
             <h4>Facebook thumbs</h4>
-            <p>Icons design, brand &amp; logotypes</p>
+            <p>Icons design</p>
           </figcaption>
         </figure>
       </div>
@@ -394,7 +394,5 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/deps/jquery.js"><\/script>')</script>
   <script src="js/app.js"></script>
-  <script src="js/top_nav.js"></script>
-  <script src="js/contact_alert.js"></script>
-  </body>
+</body>
 </html>
